add javascript, fixing response div

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                     </div>
                 </div>
                 <div class="row justify-content-center">
-                    <div id="response-output" class="col-10"></div>
+                    <div id="response-output" class="col-md-9"></div>
                 </div>
             </div>
         </div>
